Fix site nav being off center

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -240,6 +240,7 @@ table {
 .site-nav {
     list-style: none;
     margin: 28px 0 10px;
+    padding-left: 0;
 }
 
 .site-nav-item {
